--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "express-mongo-sanitize": "^1.3.2",
-    "express-rate-limit": "^3.5.0",
-    "helmet": "^3.16.0",
-    "hpp": "^0.2.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.4.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.2",
-    "morgan": "^1.9.1",
-    "nodemailer": "^6.1.1",
+    "mongoose": "5.10.10",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.5.0",
     "pug": "^2.0.3",
-    "slugify": "^1.3.4",
-    "validator": "^10.11.0",
+    "slugify": "^1.4.7",
+    "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   }
 }
